# xps-launcher

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/gd/2.0/Resources/: AchievementsDesc.plist  FireSheet_01-hd.plist  FireSheet_01-uhd.plist  FireSheet_01.plist  GJ_GameSheet-hd.plist  GJ_GameSheet-uhd.plist  GJ_GameSheet.plist  GJ_GameSheet02-hd.plist  GJ_GameSheet02-uhd.plist  GJ_GameSheet02.plist  GJ_GameSheet03-hd.plist  GJ_GameSheet03-uhd.plist  GJ_GameSheet03.plist  GJ_GameSheetGlow-hd.plist  GJ_GameSheetGlow-uhd.plist  GJ_GameSheetGlow.plist  LevelData.plist  objectDefinitions.plist
src-tauri/gd/2.2/geode/mods/: capeling.startpos_switcher.geode  cgytrus.menu-shaders.geode  cvolton.level-id-api.geode  cvolton.misc_bugfixes.geode  geode.custom-keybinds.geode  geode.node-ids.geode  geode.texture-loader.geode  hjfod.backups.geode  hjfod.gdshare.geode  hjfod.gmd-api.geode  hjfod.trashcan.geode
src-tauri/gd/2.2/geode/resources/geode.loader/: APISheet-hd.plist  APISheet-uhd.plist  APISheet.plist  mod.json
src-tauri/gd/2.2/geode/unzipped/capeling.startpos_switcher/: modified-at
src-tauri/gd/2.2/geode/unzipped/cgytrus.menu-shaders/: about.md  cgytrus.menu-shaders.dylib  changelog.md  modified-at
src-tauri/gd/2.2/geode/unzipped/cvolton.betterinfo/: cvolton.betterinfo.dylib  modified-at
src-tauri/gd/2.2/geode/unzipped/cvolton.level-id-api/: cvolton.level-id-api.dylib  modified-at
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+53 files in other folders)
