[package]
name = "xps-launcher"
version = "3.0.0-b2"
description = "Official XPS Launcher!"
authors = ["Lncvrt"]
edition = "2021"

[lib]
name = "xps_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri-plugin-dialog = "2.2.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
tauri-plugin-process = "2.2.0"
sysinfo = "0.33.1"
open = "5.3.2"
tauri-plugin-fs = "2.2.0"
webbrowser = "1.0.3"
